--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "axios": "^0.19.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.1",
     "react": "^16.8.6",
     "react-axios": "^2.0.3",
     "react-dom": "^16.8.6",
@@ -31,5 +34,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ]
+    ]
+  },
+ "devDependencies": {
+  "@babel/core": "^7.1.0",
+  "@babel/plugin-proposal-class-properties": "^7.1.0",
+  "@babel/plugin-proposal-decorators": "^7.1.0",
+  "@babel/preset-env": "^7.1.0"
+}
 }
